Security setup (filters/rules), fis CSRF in forms, allow IFrame from same-origin